backup/argocd-testairflow-backup20241226/templates/webserver/webserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  generation: 1
  name: airflow-webserver-ingress
  namespace: airflow
spec:
  ingressClassName: nginx-internal
  rules:
  - host: airflow.comn.hunicloud.com
    http:
      paths:
      - backend:
          service:
            name: test-of-airflow-web 
            port:
              number: 8080
        path: /
        pathType: Prefix
status:
  loadBalancer:
